--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/VisualCrypt.Windows.csproj
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/VisualCrypt.Windows.csproj
@@ -75,6 +75,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -109,6 +110,8 @@
       <DependentUpon>PasswordDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\PasswordDialogViewModel.cs" />
+    <Compile Include="DesignTime.cs" />
+    <Compile Include="FontSettings.cs" />
     <Compile Include="Pages\FilesPage.xaml.cs">
       <DependentUpon>FilesPage.xaml</DependentUpon>
     </Compile>
