--- a/Common/Cryptography/VisualCrypt.Cryptography/VisualCrypt.Cryptography.csproj
+++ b/Common/Cryptography/VisualCrypt.Cryptography/VisualCrypt.Cryptography.csproj
@@ -48,6 +48,7 @@
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VisualCrypt2\DataTypes\QualifiedRandom.cs" />
     <Compile Include="VisualCrypt2\Implementations\SanitizationStringExtensions.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\FormatInvariant.cs" />
     <Compile Include="VisualCrypt2\DataTypes\MACCipher16.cs" />
