--- a/Common/ApplicationLogic/VisualCrypt.Language/VisualCrypt.Language.csproj
+++ b/Common/ApplicationLogic/VisualCrypt.Language/VisualCrypt.Language.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings\Info.cs" />
+    <Compile Include="Strings\NoDotsExtension.cs" />
     <Compile Include="Strings\Resources.de.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -136,7 +137,7 @@
       <LastGenOutput>Resources.qps-ploc.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
+      <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings\Resources.ru.resx">
