--- a/Common/ApplicationLogic/VisualCrypt.Language.Tests/VisualCrypt.Language.Tests.csproj
+++ b/Common/ApplicationLogic/VisualCrypt.Language.Tests/VisualCrypt.Language.Tests.csproj
@@ -47,15 +47,22 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
     <Compile Include="Localization_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BuildTool_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\misc\VisualCrypt.BuildTools\VisualCrypt.BuildTools.csproj">
+      <Project>{c362579c-c35d-48d0-9254-9a04e20f3d6b}</Project>
+      <Name>VisualCrypt.BuildTools</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VisualCrypt.Language\VisualCrypt.Language.csproj">
       <Project>{cc794610-54c9-4f5f-ac82-005260fbb8de}</Project>
       <Name>VisualCrypt.Language</Name>
