--- a/Common/ApplicationLogic/VisualCrypt.Language/VisualCrypt.Language.csproj
+++ b/Common/ApplicationLogic/VisualCrypt.Language/VisualCrypt.Language.csproj
@@ -41,6 +41,9 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile></AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup Label="MultilingualAppToolkit">
+    <MultilingualAppToolkitVersion>3.0</MultilingualAppToolkitVersion>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings\Info.cs" />
@@ -148,6 +151,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\Multilingual App Toolkit\Microsoft.Multilingual.ResxResources.targets" Label="MultilingualAppToolkit" />
   <PropertyGroup>
     <PreBuildEvent>$(SolutionDir)\misc\VisualCrypt.BuildTools\bin\$(ConfigurationName)\VisualCrypt.BuildTools.exe -generateresourcewrapper $(ProjectDir)Strings
 </PreBuildEvent>
