--- a/Windows Desktop/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
+++ b/Windows Desktop/VisualCrypt.Desktop/VisualCrypt.Desktop.csproj
@@ -115,6 +115,12 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Printing" />
