--- a/Common/ApplicationLogic/VisualCrypt.Applications/VisualCrypt.Applications.csproj
+++ b/Common/ApplicationLogic/VisualCrypt.Applications/VisualCrypt.Applications.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Models\StatusBarModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Interfaces\Service.cs" />
+    <Compile Include="ViewModels\PortablePasswordDialogViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
