--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/VisualCrypt.Windows.csproj
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/VisualCrypt.Windows.csproj
@@ -131,6 +131,12 @@
       <DependentUpon>RenameContentDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\FontSettings.cs" />
+    <Compile Include="Pages\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\HelpPage.xaml.cs">
+      <DependentUpon>HelpPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\ContinuationPage.xaml.cs" />
     <Compile Include="Pages\MainPagePhone.xaml.cs">
       <DependentUpon>MainPagePhone.xaml</DependentUpon>
@@ -173,9 +179,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\logo_rounded_1024.scale-100.png" />
+    <Content Include="Assets\logo_square_150.png" />
+    <Content Include="Assets\logo_square_71.png" />
     <Content Include="Assets\Splash_620_300.scale-100.png" />
     <Content Include="Assets\Splash_620_300.scale-125.png" />
     <Content Include="Assets\Splash_775_375.png" />
+    <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="Asset\logo_square_150.scale-100.png" />
     <Content Include="logo_rounded_1024.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -223,6 +233,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\SettingsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\HelpPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\ContinuationPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -239,19 +257,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\InUse\ContentDialogStyles.xaml">
+    <Page Include="Styles\ContentDialogStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\InUse\BarStyles.xaml">
+    <Page Include="Styles\BarStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\InUse\DialogStyles.xaml">
+    <Page Include="Styles\PageStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Styles\InUse\VisualCryptColors.xaml">
+    <Page Include="Styles\VisualCryptColors.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
